--- a/scss/partials/_bootstrap-variables.scss
+++ b/scss/partials/_bootstrap-variables.scss
@@ -335,9 +335,9 @@ $screen-sm-max:              ($screen-md-min - 1);
 $grid-gutter-width:         30px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-// $grid-float-breakpoint:     $screen-sm-min
+$grid-float-breakpoint:     $screen-sm-max;
 //** Point at which the navbar begins collapsing.
-// $grid-float-breakpoint-max: ($grid-float-breakpoint - 1)
+$grid-float-breakpoint-max: ($grid-float-breakpoint - 1);
 
 
 //== Container sizes
